security layer added

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,12 @@
 spring.application.name=orders-apis
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+# InMemoryUserDetailsManager | SecurityProperties
+#spring.security.user.password=orders-apis-pass
+
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=TRACE
+
+#logging.level.org.springframework.test.context.jdbc=DEBUG
